# mt

./: .dockerignore  .editorconfig  .gitignore  AUDIT.md  EXPERIMENT.md  PREDICT_SYNTHETIC.md  README.md  SYNTHETIC_GENERATION.md  docker-compose.yml  pyproject.toml
artifacts/audit_category/: REPORT.md
artifacts/audit_category/dataset/: data_audit_summary.csv  data_dictionary.csv  dataset_profile.csv
artifacts/audit_category/diagnostics/: diagnostic_summary.csv  seasonality_summary.csv  segment_summary.csv  stationarity_summary.csv
artifacts/audit_sku/: REPORT.md
dags/: mt_pipeline_dags.py
docker/: airflow.dockerfile  mlflow.dockerfile  postgres-init.sql
manifests/: audit_category.yaml  audit_sku.yaml  experiment_category.yaml  experiment_category_reduced.yaml  experiment_sku.yaml  experiment_sku_reduced.yaml  experiment_smoke.yaml  forecast_smoke.yaml  monitoring_experiment.yaml  predict_synthetic.yaml  synthetic.yaml  synthetic_generation.yaml  synthetic_monitoring.yaml
manifests/favorita/: audit_category.yaml  audit_sku.yaml  experiment_category_curated.yaml  experiment_category_single.yaml  experiment_sku_curated.yaml  experiment_sku_single.yaml  forecast_category_curated.yaml  forecast_category_single.yaml  forecast_sku_curated.yaml  forecast_sku_single.yaml
manifests/m5/: audit_category.yaml  audit_sku.yaml  experiment_category_curated.yaml  experiment_category_single.yaml  experiment_sku_curated.yaml  experiment_sku_single.yaml  forecast_category_curated.yaml  forecast_category_single.yaml  forecast_sku_curated.yaml  forecast_sku_single.yaml
(+652 files in other folders)
