[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mt"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
	"pandas",
	"numpy",
	"scipy",
	"scikit-learn",
	"statsmodels",
	"matplotlib",
	"pyyaml",
	"pydantic",
	"openpyxl",
	"lightgbm",
	"catboost",
	"torch",
	"jupyter",
	"ipykernel",
	"neuralforecast"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mt = "mt.cli.main:main"
